--- a/manifest.json
+++ b/manifest.json
@@ -2,5 +2,6 @@
 {
     "accent-color": "#2e3440",
     "name": "Tridentu",
-    "display": "standalone"
+    "display": "standalone",
+ "background_color": "#3b4252"
 }
