--- a/manifest.json
+++ b/manifest.json
@@ -3,5 +3,6 @@
     "accent-color": "#2e3440",
     "name": "Tridentu",
     "display": "standalone",
- "background_color": "#3b4252"
+    "background_color": "#3b4252",
+    "theme_color": "#eceff4"
 }
