--- a/manifest.json
+++ b/manifest.json
@@ -4,5 +4,6 @@
     "name": "Tridentu",
     "display": "standalone",
     "background_color": "#3b4252",
-    "theme_color": "#eceff4"
+    "theme_color": "#eceff4",
+    "lang": "en"
 }
