--- a/manifest.json
+++ b/manifest.json
@@ -5,5 +5,6 @@
     "display": "standalone",
     "background_color": "#3b4252",
     "theme_color": "#eceff4",
-    "lang": "en"
+    "lang": "en",
+    "description", "Tridentu-R's homepage."
 }
