--- a/manifest.json
+++ b/manifest.json
@@ -6,5 +6,6 @@
     "background_color": "#3b4252",
     "theme_color": "#eceff4",
     "lang": "en",
-    "description", "Tridentu-R's homepage."
+    "description": "Tridentu-R's homepage.",
+    "categories": "utilities"
 }
