--- a/manifest.json
+++ b/manifest.json
@@ -15,6 +15,12 @@
             "sizes": "48x48",
             "type": "image/png",
             "purpose": "maskable any"
+        },
+         {
+            "src": "/images/icons/icon-192x192.png",
+            "sizes": "192x192",
+            "type": "image/png",
+            "purpose": "maskable any"
         }
     ],
     "prefer_related_applications": false
