--- a/manifest.json
+++ b/manifest.json
@@ -23,6 +23,6 @@
             "purpose": "maskable any"
         }
     ],
-    "prefer_related_applications": false
+    "prefer_related_applications": false,
     "short_name": "Tridentu"
 }
