--- a/manifest.json
+++ b/manifest.json
@@ -12,14 +12,12 @@
         {
             "src": "/images/icons/icon-48x48.png",
             "sizes": "48x48",
-            "type": "image/png",
-            "purpose": "maskable any"
+            "type": "image/png"
         },
          {
             "src": "/images/icons/icon-192x192.png",
             "sizes": "192x192",
-            "type": "image/png",
-            "purpose": "maskable any"
+            "type": "image/png"
         }
     ],
     "prefer_related_applications": false,
