--- a/manifest.json
+++ b/manifest.json
@@ -22,5 +22,12 @@
     ],
     "prefer_related_applications": false,
     "short_name": "Tridentu",
-    "start_url": "https://tridentu.github.io"
+    "start_url": "https://tridentu.github.io",
+    "shortcuts": [
+        {
+            "name": "Features",
+            "url": "/features",
+            "description": "Lists Tridentu's main features."
+        }
+    ]
 }
